
package GrupoF.Proyecto3.Enum;

/**
 *
 * @author cre_c
 */
public enum EstadoContrato {

    ESPERA, RECHAZADO, FINALIZADO, PROCESO
    
}
