
package GrupoF.Proyecto3.Enum;

/**
 *
 * @author cre_c
 */
public enum Rol {

    ADM, USUARIO, INVITADO
    
}
