package GrupoF.Proyecto3;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class Proyecto003Application {

	public static void main(String[] args) {
		SpringApplication.run(Proyecto003Application.class, args);
                //prueba decambios 0.4
                
                //si lees esto, ENRI tuvo aqui. ya finalizado las entidades
	}

}
