package GrupoF.Proyecto3.Repositorios;

import GrupoF.Proyecto3.Entidades.Dni;
import GrupoF.Proyecto3.Entidades.Usuario;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.data.jpa.repository.Query;
import org.springframework.data.repository.query.Param;
import org.springframework.stereotype.Repository;

@Repository
public interface DniRepositorio extends JpaRepository<Dni, String> {
    @Query("SELECT d FROM Dni d WHERE d.numero = :numero")
    public Usuario buscarPorCorreo(@Param("numero") String numero);  
}
